[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "icc-profile-organizer"
version = "0.1.0"
description = "A smart tool that automatically organizes ICC color profiles, EMX/EMY2 files, and PDFs by printer model and paper brand"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "narrowstacks" }]
requires-python = ">=3.8"
dependencies = [
    "PyYAML>=6.0",
    "Pillow>=12.0.0",
    "textual>=6.5.0",
    "rich>=14.2.0",
]
keywords = ["icc", "color-profile", "printer", "organization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/narrowstacks/icc-profile-organizer"
Repository = "https://github.com/narrowstacks/icc-profile-organizer"

[project.scripts]
icc-organizer = "organize_profiles:main"
icc-config-wizard = "config_wizard:main"
icc-update-descriptions = "update_profile_descriptions:main"

[tool.setuptools]
packages = ["lib"]
py-modules = ["organize_profiles", "config_wizard", "update_profile_descriptions"]

[tool.setuptools.package-data]
lib = ["**/*.yaml", "**/*.yml"]
